@@ -93,6 +93,13 @@ store_lastlog_message(const char *user, uid_t uid)
 	if (!options.print_lastlog)
 		return;
 
+# ifdef CUSTOM_SYS_AUTH_GET_LASTLOGIN_MSG
+	time_string = sys_auth_get_lastlogin_msg(user, uid);
+	if (time_string != NULL) {
+		buffer_append(&loginmsg, time_string, strlen(time_string));
+		xfree(time_string);
+	}
+# else
 	last_login_time = get_last_login_time(uid, user, hostname,
 	    sizeof(hostname));
 
@@ -107,6 +114,7 @@ store_lastlog_message(const char *user, uid_t uid)
 			    time_string, hostname);
 		buffer_append(&loginmsg, buf, strlen(buf));
 	}
+# endif /* CUSTOM_SYS_AUTH_GET_LASTLOGIN_MSG */
 #endif /* NO_SSH_LASTLOG */
 }
 
